PROJECT("imgui")

AUX_SOURCE_DIRECTORY(. SRCS)

ADD_LIBRARY(${PROJECT_NAME} ${BUILD_MODULE_TYPE}
  ${SRCS}
)
MESSAGE(STATUS "\t BUILD_MODULE_TYPE = ${BUILD_MODULE_TYPE}")

LIST(APPEND MODULE_DPES ${OpenCV_LIBRARIES})
LIST(APPEND MODULE_DPES ${SDL2_LIBRARIES})
LIST(APPEND MODULE_DPES -lGL -ldl)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MODULE_DPES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${MODULE_INCS})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})